--- a/Trabalho/style.css
+++ b/Trabalho/style.css
@@ -111,6 +111,24 @@ button:hover{
     opacity: 1;
 }
 
+a.modal-error{
+    background: var(--white);
+    color: var(--red);
+    text-decoration: none;
+    
+    border: var(--white);
+    right: 10px;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    justify-content: flex-end;
+    justify-items: end;
+    align-self: flex-end;
+    position: relative;
+    bottom: 0;
+    right: 0;
+}
+
 .checkbox {
     align-items: center;
     margin: 0;
@@ -279,9 +297,13 @@ table tr{
     opacity: 0.7;    
 }
 
+table td img:hover{
+    cursor: pointer;
+}
+
 table tr:hover{
     opacity: 1;
-    cursor: pointer;
+   
 }
 
 table th{
@@ -343,6 +365,46 @@ table thead tr th:last-child, table tbody tr td:last-child  {
     z-index: 1;
 }
 
+.modal-overlay-error{
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-color-modal);
+    position: fixed;
+    top: 10%;
+    display: flex;
+    align-items:start;
+    justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    text-align: justify;
+    z-index: 999;
+}
+
+.modal-overlay-error.active{
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-error{
+    background: var(--red);
+    padding: 1rem 2.4rem 1rem 2.4rem;
+    max-width: 500px;
+    width: 90%;
+    border-radius: 0.5rem;
+    position: relative;
+    z-index: 1;
+    text-align: justify;
+}
+
+#error{
+    margin-right: 10px;
+    align-content:space-around ;
+    padding: 0.7rem;
+    justify-content: flex-end;
+    size: 2rem;
+    color: var(--white);
+    font-family: "Poppins", "sans-serif";
+}
 /*FORM ==================================*/
 #form{
     max-width: 500px;    
